--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -490,7 +490,7 @@ $z-index-predictive-search-wrapper: 1000;
 $z-index-skip-to-content: 10000; // really high to be safe of app markup
 
 /*================ SVG ================*/
-$svg-select-icon: #{'//cdn.shopify.com/s/files/1/0412/3027/0631/t/94/assets/ico-select.svg?v=29003672709104678581682513552'};
+$svg-select-icon: #{'//cdn.shopify.com/s/files/1/0412/3027/0631/t/113/assets/ico-select.svg?v=29003672709104678581695642484'};
 
 /*================ Drawers ================*/
 $transition-drawer: all $transition-duration-slow cubic-bezier(0.29, 0.63, 0.44, 1);
@@ -618,7 +618,7 @@ $slick-opacity-not-active: 0.25;
 
 // Only called once so make sure proper file is grabbed
 @function slick-image-url($url) {
-  @return url(//cdn.shopify.com/s/files/1/0412/3027/0631/t/94/assets/ajax-loader.gif?v=41356863302472015721682513552);
+  @return url(//cdn.shopify.com/s/files/1/0412/3027/0631/t/113/assets/ajax-loader.gif?v=41356863302472015721695642484);
 }
 
 // Unused intentionally
@@ -747,6 +747,7 @@ p.wc_review_author_name {
   text-transform: capitalize !important;
   position: relative !important;
   z-index: 99 !important;
+   font-family:"Manrope";
 }
 
 /*================ Slick Slider Theme ================*/
@@ -2956,8 +2957,12 @@ hr {
 .grid--view-items {
   overflow: auto;
   margin-bottom: -$section-spacing-small;
+  -ms-overflow-style: none; 
+  scrollbar-width: none;  
 }
-
+.grid--view-items::-webkit-scrollbar {
+  display: none;
+}
 .grid-view-item {
   margin: 0 auto 15px;
   .custom__item & {
@@ -8748,5 +8753,33 @@ $min-height-disclosure: 92px;
       margin-left: 0;
     }
   }
+}
+
+/* Nyumi product  page revamp - 21 July */
+
+#product_slider_thumb li {
+  background : #F37168 !important;
+}
+
+@media screen and (max-width: 767px) {
+  .pdtb_flx .pdtb_img img {
+    width: 35px !important;
+    height: 35px !important;
+    object-fit: contain;
+}
+.product-template__container .product-single .pdtb_flx .pdtb_item {
+    flex-direction: row !important;
+    width: 50% !important;
+    gap: 8px;
+    justify-content: center !important;
+}
+  .product-template__container .product-single .pdtb_flx .pdtb_item .pdtb_txt {
+    margin-left: 0;
+    font-size: 12px !important;
+    text-align: left !important; 
+    max-width: 100%;
+    min-height: unset !important;
+    width: 100%;
+}
 }
 
