--- a/layout/theme_20220606.liquid
+++ b/layout/theme_20220606.liquid
@@ -10,7 +10,7 @@
   <meta name="facebook-domain-verification" content="8d3spwlgfmsm7v6wnu316h7zso2o9e" />
   
   {% if canonical_url contains 'nyumi-travel-pouch' %}
-  <meta name="robots" content="index">
+  <meta name="robots" content="noindex">
   {% elsif canonical_url contains 'referral-program' %}
   <meta name="robots" content="noindex">
   {% elsif canonical_url contains 'ilana-dream-blush' %}
