--- a/sections/expert-consultation.liquid
+++ b/sections/expert-consultation.liquid
@@ -87,8 +87,7 @@
     display: flex;
     justify-content: center;
     width: 48%;
-    /* margin: 3rem auto; */
-    margin:2rem auto 3rem auto;
+    margin: 3rem auto;
     align-items: center;
     background: white;
     border-radius: 22px;
@@ -168,22 +167,20 @@
       display: none;
     }
     .get-started, .start-quiz {
-      width: 90%; 
-      padding: 0.5rem 1rem;
-/*    changes made on removing doctor consult section
+      width: 47%;
       flex-direction: column;
       padding-top: 2rem;
       margin: 1rem auto;
-      margin-top: 0; */
+      margin-top: 0;
     }
     .doctor-img {
       width: 100%;
     }
     .get-started .content button, .start-quiz .content button {
-/*       border-radius: 0 0 15px 15px; */
-      font-size: 10px;
+      border-radius: 0 0 15px 15px;
+      font-size: 12px;
       font-weight: 600;
-      padding: 0.5rem 1.00rem;
+      padding: 0.6rem 1.75rem;
       letter-spacing: 0.9px;
     }
     .get-started .content button, .start-quiz .content button,
@@ -191,10 +188,9 @@
       width: 100%;
     }
     .doctor-quiz p {
-      font-size: 20px !important;
+      font-size: 17px;
       text-align: center;
       text-transform: lowercase;
-      margin-bottom: 0.25rem;
     }
     .doctor-quiz {
       padding: 0;
@@ -245,7 +241,7 @@
 <div class="expert-consult">
   <p class="expert-close">X</p>
   <div class="doctor-quiz desktop">
-<!--     <div class="get-started">
+    <div class="get-started">
       <div class="doctor-img">
         <a href="/pages/schedule-appointment">
           <img src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/Artboard_2_1.png?v=1682314929" class="desktop-img" loading="lazy"/>
@@ -254,10 +250,10 @@
       </div>
       <div class="content">
         <p >FREE Doctor Consult</p>
-         <p>Take a <span>FREE</span> doctor consult</p> 
+  <!--       <p>Take a <span>FREE</span> doctor consult</p> -->
         <button class="expert-btn">Book appointment</button>
       </div>
-    </div> -->
+    </div>
     <div class="start-quiz">
       <div class="doctor-img">
         <a href="#">
@@ -274,7 +270,7 @@
   </div>
 
   <div class="doctor-quiz mobile">
-<!--     <div class="get-started">
+    <div class="get-started">
       <p>FREE Doctor Consult</p>
       <div class="doctor-img">
         <a href="/pages/schedule-appointment">
@@ -284,8 +280,8 @@
       <div class="content">
         <button class="expert-btn">Book appointment</button>
       </div>
-    </div> -->
-<!--     <div class="start-quiz">
+    </div>
+    <div class="start-quiz">
       <p>Assess yourself</p>
       <div class="doctor-img">
         <a href="/pages/quiz-and-questionnaire">
@@ -296,19 +292,6 @@
         <a href="/pages/quiz-and-questionnaire">
           <button class="quiz-btn">Take the test</button>
         </a>
-      </div>
-    </div> -->
-    <div class="start-quiz">
-      <div class="doctor-img">
-        <a href="#">
-          <img src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/Artboard_1_2.png?v=1682314928" class="desktop-img" loading="lazy"/>
-          <img src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/Artboard_1_2.png?v=1682314928" class="mob-img" loading="lazy"/>
-        </a>
-      </div>
-      <div class="content">
-        <p>Assess yourself</p>
-  <!--       <p>Take a <span>FREE</span> doctor consult</p> -->
-        <a href="/pages/quiz-and-questionnaire"><button class="quiz-btn">Take the test</button></a>
       </div>
     </div>
   </div>
