--- a/sections/header-new.liquid
+++ b/sections/header-new.liquid
@@ -143,7 +143,7 @@
             {% endif %}
        
 
-          <a href="#" class="site-header__icon site-header__cart">
+          <div class="site-header__icon site-header__cart">
             
             <img src="{{ 'shop.png' | asset_url }}" alt="cart"/>
             <span class="icon__fallback-text">{{ 'layout.cart.title' | t }}</span>
@@ -151,7 +151,7 @@
               <span data-cart-count>{{ cart.item_count }}</span>
               <span class="icon__fallback-text medium-up--hide">{{ 'layout.cart.items_count' | t: count: cart.item_count }}</span>
             </div>
-          </a>
+          </div>
  
         </div>
 
@@ -246,9 +246,18 @@
 }
 </script>
   {% endcomment %}
-
+<script>
+    $('body').on('click', '.site-header__cart', function(e){
+      e.preventDefault();
+      $('.min_cart').toggleClass('active');
+    });
+     $('body').on('click', '.minct_close, .min_cart_outer', function(e){
+      $('.min_cart').toggleClass('active');
+    });
+  </script>
 {% if request.page_type == 'index' %}
   {% assign potential_action_target = shop.url | append: routes.search_url | append: "?q={search_term_string}" %}
+  
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
