--- a/sections/ingredients-slider.liquid
+++ b/sections/ingredients-slider.liquid
@@ -1,3 +1,394 @@
+
+<style>
+/*Slider Classes*/
+  .component_section{
+    padding-top:50px;
+    padding-bottom:0px;
+  }
+  .component_location2{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #707070;
+    font-size: 12px;
+    line-height: 30px;
+    font-family: manropes;
+    white-space: nowrap;
+  }
+  .component_location2 img{
+    width: 28px !important;
+    height:20px;
+    padding:0 6px;
+  }
+.cascade-slider_container {
+  position: relative;
+  width: 100%;
+  height: 250px;
+  margin: 25px auto;
+  padding-top: 150px;
+}
+.cascade-slider_item {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%) scale(0.3);
+  transition: all 1s ease;
+  opacity: 0;
+  z-index: -1;
+  text-align: center;
+  background-color: #fff;
+  padding: 1rem 1.5rem;
+  max-width:350px;
+  border-radius:12px;
+}
+   .cascade-slider_dot_div{
+    min-width:180px;
+  }
+  .cascade-slider_dot_div img{
+    width:70px;
+  }
+  .cascade-slider_item img{
+    width:70px;
+  }
+.cascade-slider_item.next {
+  left: 50%;
+  transform: translateY(-50%) translateX(-100%) scale(0.5);
+  filter: brightness(35%);
+  opacity: 0;
+  z-index: 1;
+}
+.cascade-slider_item.prev {
+  left: 50%;
+  transform: translateY(-50%) translateX(50%) scale(0.5);
+  filter: brightness(35%);
+  opacity: 0;
+  z-index: 1;
+}
+.cascade-slider_item.now {
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%) scale(1);
+  opacity: 1;
+  z-index: 5;
+}
+.cascade-slider_nav_thumb{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:1rem;
+}
+.nav-slider_arrow {
+  display: inline-block;
+
+  cursor: pointer;
+  z-index: 1;
+}
+.nav-slider_arrow-left {
+  
+}
+.nav-slider_arrow-right {
+ 
+}
+.nav-slider_arrow-left img {
+  height: 30px;
+  left: 40px;
+}
+.nav-slider_arrow-right img {
+  height: 30px;
+  left: 40px;
+}
+.cascade-slider_arrow {
+  display: inline-block;
+  position: absolute;
+  bottom:-70px;
+  cursor: pointer;
+  z-index: 5;
+}
+.cascade-slider_arrow-left {
+  left: 44%;
+}
+.cascade-slider_arrow-right {
+  right: 44%;
+}
+.cascade-slider_arrow-left img {
+  height: 30px;
+  left: 40px;
+}
+.cascade-slider_arrow-right img {
+  height: 30px;
+  left: 40px;
+}
+.cascade-slider_nav {
+/*   position: absolute; */
+  bottom: 0px;
+  width: 60%;
+  text-align: center;
+  z-index: 5;
+  display: flex;
+  gap:0.5rem;
+  overflow-x: auto;
+  margin-left: auto;
+  margin-right: auto;
+  scroll-behavior: smooth;
+/*   transition: 1s; */
+}
+  .cascade-slider_nav::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.cascade-slider_nav {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.cascade-slider_dot {
+  display: inline-block;
+ padding:0.5rem 0.8rem;
+  margin: 3px;
+  transition: all 0.5s;
+  background: #fff;
+  list-style: none;
+  cursor: pointer;
+  border-radius: 12px;
+   
+}
+.cascade-slider_dot:hover {
+/*   background: #2c8fab; */
+}
+.cascade-slider_dot.cur {
+ 
+  border: 1px solid #4196EF;
+}
+
+/*Profile card classes*/
+.card{
+  background-color:#fff;
+  color:#243C82;
+  width:450px;
+  height:215px;
+  border-radius:20px;
+  transition: all 1s 0s;
+  vertical-align: middle;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+}
+.photo{    
+  width:50%;
+  vertical-align: middle;
+  display:inline;
+}
+.photo img{
+  transform:translateY(-35px) translateX(-10px);
+  
+}
+.info{
+  display:inline-block;
+  width:50%;
+  height:100%;
+  text-align:center;
+}
+.info h2{
+  font-family:'Roboto';
+  text-transform:uppercase;
+  font-size: 26px;
+  color: #4196EF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.subtitle{
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 98%;
+text-align: center;
+letter-spacing: 0.055em;
+color: #243C82; 
+}
+.content{
+  font-family: Roboto;
+  font-weight: 300;
+}
+.button{
+  transform:translateX(23px) translateY(15px);
+  position:absolute;
+  padding:12px 17px;  
+  border-radius:30px;
+  color:#fff;
+  font-size:13px;
+  font-weight:500;
+  text-transform:uppercase;
+  text-decoration:none;
+  background-color:#243C82;
+  font-family:"Manrope";
+}
+.slider-cascade-wrapper{
+  background-color:#999;
+  padding:2rem 0 3.5rem 0;
+}
+  h4{
+    color:#f37168;
+    margin-bottom:4px;
+    font-family:"Manrope";
+    white-space:nowrap;
+  }
+  p{
+    font-family:"Manrope";
+  }
+  .slidercountrecord{
+    color: white;
+    font-size: 20px;
+    width:50px;
+    text-align:center;
+    line-height: 20px;
+    left: 48%;
+    bottom: -58px !important;
+  }
+@media (min-width: 560px) and (max-width: 680px) {
+  .cascade-slider_item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%) scale(0.3);
+    transition: all 1s ease;
+    opacity: 0;
+    z-index: -1;
+    text-align: center;
+    background-color: #fff;
+    padding: 1rem 1.5rem;
+  }
+  .cascade-slider_item.next {
+    left: 50%;
+    transform: translateY(-50%) translateX(-90%) scale(0.4);
+    filter: brightness(70%);
+    opacity: 1;
+    z-index: 1;
+  }
+  .cascade-slider_item.prev {
+    left: 50%;
+    transform: translateY(-50%) translateX(-10%) scale(0.4);
+    filter: brightness(70%);
+    opacity: 1;
+    z-index: 1;
+  }
+  .cascade-slider_item.now {
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%) scale(0.6);
+    opacity: 1;
+    z-index: 5;
+  }
+  .cascade-slider_arrow-left img {
+    height: 30px;
+    left: 30px;
+  }
+  .cascade-slider_arrow-right img {
+    height: 30px;
+    left: 30px;
+  }
+  .cascade-slider_nav {
+    
+  }
+}
+@media (max-width: 560px) {
+  .slidercountrecord{
+    color:white;
+    font-size:16px;
+    line-height:20px;
+    left: 45%;
+    width:40px;
+    text-align:center;
+    bottom: -40px !important;
+  }
+  .component_location2 img{
+    width:28px !important ;
+    height:20px;
+    padding:0 6px;
+  }
+  h4{
+    margin-bottom:4px;
+    color:#f37168;
+  }
+  .cascade-slider_item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%) scale(0.5);
+    transition: all 1s ease;
+    opacity: 0;
+    z-index: -1;
+    text-align: center;
+     background-color: #fff;
+    padding: 1rem;
+    border-radius:12px;
+  }
+  .cascade-slider_dot_div{
+    min-width:120px;
+  }
+  .cascade-slider_dot_div img{
+    width:70px;
+  }
+  .cascade-slider_item img{
+    width:70px;
+  }
+  .cascade-slider_item.next {
+    left: 50%;
+    transform: translateY(-50%) translateX(-95%) scale(0.5);
+    filter: brightness(70%);
+    opacity: 0.4;
+    z-index: 1;
+  }
+  .cascade-slider_item.prev {
+    left: 50%;
+    transform: translateY(-50%) translateX(50%) scale(0.7);
+    filter: brightness(100%);
+    opacity: 1;
+    z-index: 1;
+  }
+  .cascade-slider_item.now {
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%) scale(0.9);
+    opacity: 1;
+    z-index: 5;
+    width:65%;
+  }
+  .cascade-slider_arrow {
+  display: inline-block;
+  position: absolute;
+  bottom:-50px;
+  cursor: pointer;
+  z-index: 5;
+}
+.nav-slider_arrow{
+  display:none;
+}
+.cascade-slider_arrow-left {
+  left: 36%;
+}
+.cascade-slider_arrow-right {
+  right: 36%;
+}
+  .cascade-slider_arrow-left img {
+    height: 30px;
+    left: 30px;
+  }
+  .cascade-slider_arrow-right img {
+    height: 30px;
+    left: 30px;
+  }
+  .cascade-slider_nav {
+   padding: 0.5rem;
+    width:100%;
+  }
+  .slider-cascade-wrapper{
+  padding:1rem 0 2.5rem 0;
+}
+.component_section{
+  padding-top:0 !important;
+    padding-bottom:0 !important;
+  }
+}
+
+</style>
 <div class="component_section ingred_slider" id="comp_ingred_slider">
   <div class="component-wrapper">
     {% if section.settings.title != blank %}
@@ -5,12 +396,12 @@
       {{ section.settings.title }}
     </h4>
     {% endif %}
-    {% if section.settings.description != blank %}
+    <!-- {% if section.settings.description != blank %}
     <p class="section_subheading">
       {{ section.settings.description | strip_html }}
     </p>
-    {% endif %}
-    <div class="component_slider_wrapper">
+    {% endif %} -->
+<!--     <div class="component_slider_wrapper">
       <ul class="component_slider">
         {% for block in section.blocks %}
         <li>
@@ -34,10 +425,269 @@
         </li>
         {% endfor %}
       </ul>
+    </div> -->
+    <div class="cascade-slider_nav_thumb">
+      <span class="nav-slider_arrow nav-slider_arrow-left" data-action="prev">
+          <img src="{{ 'arr-fill-left.png' | asset_url }}" />
+        </span>
+      <ol class="cascade-slider_nav">
+    {% for block in section.blocks %}
+      {% if forloop.index==0 %}
+        <div class="cascade-slider_dot cur">
+          <div class="cascade-slider_dot_div">
+          {% if block.settings.ingre_image != blank %}
+          <img class="lazyload" data-src="{{ block.settings.ingre_image | img_url:"master" }}" alt="{{ block.settings.ingre_image.alt }}">
+          {% else %}
+          <img class="lazyload" data-src="//images.ctfassets.net/537ig19c198x/4sGi6At4PCab1Feagu0m0L/112997b81a3ed869e1af9b24d0f94da5/coconut_oil.png" alt="#">
+          {% endif %}
+          {% if block.settings.ingre_title != blank %}
+          <h4>{{ block.settings.ingre_title }}</h4>
+          {% endif %}
+          
+          {% if block.settings.location != blank %}
+          <span class="component_location2">
+            <img class="lazyload" data-src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/map-black.png" alt="#">
+            {{ block.settings.location }}
+          </span>
+          {% endif %}
+          </div>
+        </div>
+        {% else %}
+        <div class="cascade-slider_dot">
+          <div class="cascade-slider_dot_div">
+          {% if block.settings.ingre_image != blank %}
+          <img class="lazyload" data-src="{{ block.settings.ingre_image | img_url:"master" }}" alt="{{ block.settings.ingre_image.alt }}">
+          {% else %}
+          <img class="lazyload" data-src="//images.ctfassets.net/537ig19c198x/4sGi6At4PCab1Feagu0m0L/112997b81a3ed869e1af9b24d0f94da5/coconut_oil.png" alt="#">
+          {% endif %}
+          {% if block.settings.ingre_title != blank %}
+          <h4>{{ block.settings.ingre_title }}</h4>
+          {% endif %}
+          {% if block.settings.location != blank %}
+          <span class="component_location2">
+            <img class="lazyload" data-src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/map-black.png" alt="#">
+            {{ block.settings.location }}
+          </span>
+          {% endif %}
+          </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+  </ol>
+      <span class="nav-slider_arrow nav-slider_arrow-right" data-action="next">
+          <img src="{{ 'arr-fill-right.png' | asset_url }}" />
+        </span>
     </div>
+    <div class="slider-cascade-wrapper">
+      <div style="text-align: end;padding: 0 1rem;"><img src="{{ 'close.png' | asset_url }}" width=16 height=16 class="slider-cascade-wrapper-close"/></div>
+    <div class="cascade-slider_container" id="cascade-slider">
+  <div class="cascade-slider_slides" id="cascade-slider_slides_id" onSwap="touchsurfaceSwap(event)">
+    {% for block in section.blocks %}
+        <div class="cascade-slider_item">
+          {% if block.settings.ingre_image != blank %}
+          <img class="lazyload" data-src="{{ block.settings.ingre_image | img_url:"master" }}" alt="{{ block.settings.ingre_image.alt }}">
+          {% else %}
+          <img class="lazyload" data-src="//images.ctfassets.net/537ig19c198x/4sGi6At4PCab1Feagu0m0L/112997b81a3ed869e1af9b24d0f94da5/coconut_oil.png" alt="#">
+          {% endif %}
+          {% if block.settings.ingre_title != blank %}
+          <h4>{{ block.settings.ingre_title }}</h4>
+          {% endif %}
+          {% if block.settings.ingr_desc != blank %}
+          {{ block.settings.ingr_desc }}
+          {% endif %}
+          {% if block.settings.location != blank %}
+          <span class="component_location2">
+            <img class="lazyload" data-src="https://cdn.shopify.com/s/files/1/0412/3027/0631/files/map-black.png" alt="#">
+            {{ block.settings.location }}
+          </span>
+          {% endif %}
+        </div>
+        {% endfor %}
+        <span class="cascade-slider_arrow cascade-slider_arrow-left" data-action="prev">
+          <img src="{{ 'arr-white-left.png' | asset_url }}" />
+        </span>
+        <span class="cascade-slider_arrow slidercountrecord">
+            
+        </span>
+        <span class="cascade-slider_arrow cascade-slider_arrow-right" data-action="next">
+          <img src="{{ 'arr-white-right.png' | asset_url }}" />
+        </span>
   </div>
 </div>
+    </div>
+</div>
+<script>
+  // Based on a Pen by Russell *ttps://codepen.io/Pycb/pen/wWRrjg*
+//Using Jquery 'Cascade Slider jQuery Plugin' by jqueryscript.net 'https://www.jqueryscript.net/demo/Minimal-3D-Image-Rotator-with-jQuery-CSS3-Cascade-Slider/'
+(function($) {
+  $.fn.cascadeSlider = function(opt) {
+    var $this = this,
+      itemClass = opt.itemClass || 'cascade-slider_item',
+      arrowClass = opt.arrowClass || 'cascade-slider_arrow',
+      $item = $this.find('.' + itemClass),
+      $arrow = $this.find('.' + arrowClass),
+      itemCount = $item.length;
 
+    var defaultIndex = 0;
+
+    changeIndex(defaultIndex);
+    $(".slider-cascade-wrapper").hide();
+    // $(".slidercountrecord")[0].innerText=`${defaultIndex+1}/${itemCount}`;
+    $arrow.on('click', function() {
+      var action = $(this).data('action'),
+        nowIndex = $item.index($this.find('.now'));
+        // $(".slidercountrecord")[0].innerText=`${nowIndex+1}/${itemCount}`;
+      if(action == 'next') {
+        if(nowIndex == itemCount - 1) {
+          changeIndex(0);
+        } else {
+          changeIndex(nowIndex + 1);
+        }
+      } else if (action == 'prev') {
+        if(nowIndex == 0) {
+          changeIndex(itemCount - 1);
+        } else {
+          changeIndex(nowIndex - 1);
+        }
+      }
+
+      $('.cascade-slider_dot').removeClass('cur');
+      //$('.cascade-slider_dot').next().addClass('cur');
+    });
+    
+    // add data attributes
+    for (var i = 0; i < itemCount; i++) {
+      $('.cascade-slider_item').each(function(i) {
+        $(this).attr('data-slide-number', [i]);
+      });
+    }
+    
+    // dots
+    $('.cascade-slider_dot').bind('click', function(){
+      // add class to current dot on click
+      $(".slider-cascade-wrapper").show();
+      $('.cascade-slider_dot').removeClass('cur');
+      $(this).addClass('cur');
+
+      var index = $(this).index();
+      $(".slidercountrecord")[0].innerText=`${index+1}/${itemCount}`;
+      
+      $('.cascade-slider_item').removeClass('now prev next');
+      var slide = $('.cascade-slider_slides').find('[data-slide-number=' + index + ']');
+      slide.prev().addClass('prev');
+      slide.addClass('now');
+      slide.next().addClass('next');
+
+      if(slide.next().length == 0) {
+        $('.cascade-slider_item:first-child').addClass('next');
+      }
+
+      if(slide.prev().length == 0) {
+        $('.cascade-slider_item:last-child').addClass('prev');
+      }
+    });
+    
+    $("#cascade-slider_slides_id")
+      .on('touchstart', function(e) {
+          touch_x = e.changedTouches[event.changedTouches.length - 1].clientX;
+      })
+      .on("click touchend", function (e) {
+            if(e.type=='touchend' && Math.abs(touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)>3) 
+            {
+              if((touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)>50)
+              {
+                 nowIndex = $item.index($this.find('.now'));
+                 // $(".slidercountrecord")[0].innerText=`${nowIndex+1}/${itemCount}`;
+                    if(nowIndex == 0) {
+                      changeIndex(itemCount - 1);
+                    } else {
+                      changeIndex(nowIndex - 1);
+                    }
+              }
+              else if((touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)<-50){
+                nowIndex = $item.index($this.find('.now'));
+                  // $(".slidercountrecord")[0].innerText=`${nowIndex+1}/${itemCount}`;
+                  if(nowIndex == itemCount - 1) {
+                      changeIndex(0);
+                    } else {
+                      changeIndex(nowIndex + 1);
+                    }
+              }
+            }
+            // // Your code here
+            // alert('This element only touched, not swiped');
+        });
+    
+    function changeIndex(nowIndex) {
+      // clern all class
+      $this.find('.now').removeClass('now');
+      $this.find('.next').removeClass('next');
+      $this.find('.prev').removeClass('prev');
+      $(".slidercountrecord")[0].innerText=`${nowIndex+1}/${itemCount}`;
+      if(nowIndex == itemCount -1){
+        $item.eq(0).addClass('next');
+      }
+      if(nowIndex == 0) {
+        $item.eq(itemCount -1).addClass('prev');
+      }
+
+      $item.each(function(index) {
+        if(index == nowIndex) {
+          $item.eq(index).addClass('now');
+        }
+        if(index == nowIndex + 1 ) {
+          $item.eq(index).addClass('next');
+        }
+        if(index == nowIndex - 1 ) {
+          $item.eq(index).addClass('prev');
+        }
+      });
+    }
+  };
+})(jQuery);
+
+$('#cascade-slider').cascadeSlider({
+  itemClass: 'cascade-slider_item',
+  arrowClass: 'cascade-slider_arrow'
+});
+</script>
+<script>
+  $('.nav-slider_arrow-left').click(function(event) {
+    $('.cascade-slider_nav')[0].scrollLeft -= 300;
+    event.preventDefault();
+  });
+  $('.nav-slider_arrow-right').click(function(event) {
+    $('.cascade-slider_nav')[0].scrollLeft += 300;
+    event.preventDefault();
+  });
+  $('.slider-cascade-wrapper-close').click(function(){
+    $(".slider-cascade-wrapper").hide();
+  });
+</script>
+
+<!-- <script>
+  $("#cascade-slider_slides_id")
+        .on('touchstart', function(e) {
+            touch_x = e.changedTouches[event.changedTouches.length - 1].clientX;
+        })
+        .on("click touchend", function (e) {
+            if(e.type=='touchend' && Math.abs(touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)>3) 
+            {
+              if((touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)>50)
+              {
+                  alert("Left Swipe");
+                return;
+              }
+              else if((touch_x-e.changedTouches[event.changedTouches.length - 1].clientX)<-50){
+                  alert("Right Swipe");
+                return;
+              }
+               
+            }
+            // // Your code here
+            // alert('This element only touched, not swiped');
+        });
+</script> -->
 {% schema %}
   {
     "name": "Ingredients Slider",
