--- a/sections/product-faq.liquid
+++ b/sections/product-faq.liquid
@@ -1,4 +1,10 @@
-<div id="shopify-section-product-template" class="shopify-section">
+<style>
+  .read_more_faq.button{
+  position:relative;
+  transform:unset;
+}
+</style>
+<div id="shopify-section-product-template " class="shopify-section desktop mobile">
   <div class="faq_section relative" id="product_faq" style="display: block;">
     {% if section.settings.title != blank %}
     <div class="faq_title center">
