--- a/sections/product-page-icon.liquid
+++ b/sections/product-page-icon.liquid
@@ -1,4 +1,4 @@
-<div class="pd_icon_section" id="pdp_icon">
+<div class="pd_icon_section mobile" id="pdp_icon">
   {% if section.settings.title != blank %}
   <div class="pdi_heading">{{ section.settings.title }}</div>
   {% endif %}
