--- a/sections/product-reviews.liquid
+++ b/sections/product-reviews.liquid
@@ -3,9 +3,11 @@
   {% if section.settings.title != blank %}
   <p class="section_heading">{{ section.settings.title }}</p>
   {% endif %}
+  {% comment %}
   {% if section.settings.description != blank %}
   <p class="section_subheading">{{ section.settings.description }}</p>
   {% endif %}
+  {% endcomment %}
 </div>
  <div id="wc_review_section" class="wc_review_main_content" data-url="{{ shop.url }}" data-handle="{{ product.handle }}" data-product_id="{{ product.id }}" data-limit="0"></div>
 
