--- a/snippets/seo-footer-beauty-essentials.liquid
+++ b/snippets/seo-footer-beauty-essentials.liquid
@@ -20,12 +20,12 @@
     font-weight: 400;
     color: #484848;
   }
-  .seo-footer ul li {
+  .seo-footer ul {
     font-family: 'manropes';
+    list-style-type: 'circle';
     font-size: 12px;
     font-weight: 400;
     color: #484848;
-    list-style: disc;
   }
   .seo-footer button {
     font-family: 'manropeb';
