--- a/snippets/seo-footer-sleep.liquid
+++ b/snippets/seo-footer-sleep.liquid
@@ -2,29 +2,26 @@
   .seo-footer {
     padding: 0 100px;
   }
-  .seo-footer a{
-    color:#551A8B;
-  }
   .seo-footer h1 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 14px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer h2 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer p {
-    font-family: 'corbenr';
+    font-family: 'manropes';
     font-size: 12px;
     font-weight: 400;
     color: #484848;
   }
   .seo-footer button {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
   }
   .expanded-description {
@@ -43,9 +40,9 @@
 
 <div class="seo-footer">
   <div class="minified-description">
-    <h2 class="minified-heading">
+    <h1 class="minified-heading">
       What Are Melatonin Sleep Gummies?
-    </h2>
+    </h1>
     <p class="minified-para">
       Melatonin sleep gummies are chewable supplements that contain melatonin, a hormone that helps regulate sleep-wake cycles, aiding in better sleep. Melatonin, commonly referred to as the "sleep hormone," plays a vital role in regulating the body's natural sleep-wake cycle throughout the day, the pineal gland in our brain remains inactive. But a few hours before our natural sleep time, as daylight fades and darkness descends, the pineal gland springs into action and releases melatonin into the brain. </p>
 <p>Nyumi’s Beauty Sleep Gummies are formulated with the goodness of Melatonin, L-Theanine, Chamomile, and other essential nutrients to help you get a good night’s sleep. These gummies deliver your daily melatonin intake in a delicious blueberry flavor. Our gummies are the best melatonin gummies in India with clinically proven results.</p>
@@ -56,19 +53,10 @@
 
   <div class="expanded-description">
     <h2>
-      What Are Melatonin Sleep Gummies?
-    </h2>
-      <p class="minified-para">
-    Melatonin sleep gummies are chewable supplements that contain melatonin, a hormone that helps regulate sleep-wake cycles, aiding in better sleep. Melatonin, commonly referred to as the "sleep hormone," plays a vital role in regulating the body's natural sleep-wake cycle throughout the day, the pineal gland in our brain remains inactive. But a few hours before our natural sleep time, as daylight fades and darkness descends, the pineal gland springs into action and releases melatonin into the brain. </p>
-<p>Nyumi’s Beauty Sleep Gummies are formulated with the goodness of Melatonin, L-Theanine, Chamomile, and other essential nutrients to help you get a good night’s sleep. These gummies deliver your daily melatonin intake in a delicious blueberry flavor. Our gummies are the best melatonin gummies in India with clinically proven results.</p>
-<p>The recommended dosage for melatonin is 1 to 5 milligrams two hours before bedtime. Experts recommend taking melatonin at a low dosage and then gradually increasing its consumption.
-    </p>
-    <h2>
       Key Benefits of Buying Melatonin Beauty Sleep Gummies From Nyumi
     </h2>
     <p>
-      Our sleep gummies are clinically proven to improve sleep time, reduce stress, improve skin health, and regulate your sleep-wake cycle making them the best sleep gummies in India. 
-    </p>
+      Our sleep gummies are clinically proven to improve sleep time, reduce stress, improve skin health, and regulate your sleep-wake cycle making them the best sleep gummies in India. </p>
     <h2>
       How Do Melatonin Sleep Gummies Work?
     </h2>
