--- a/snippets/seo-footer-hair.liquid
+++ b/snippets/seo-footer-hair.liquid
@@ -2,29 +2,26 @@
   .seo-footer {
     padding: 0 100px;
   }
-  .seo-footer a{
-    color:#551A8B;
-  }
   .seo-footer h1 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 14px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer h2 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer p {
-    font-family: 'corbenr';
+    font-family: 'manropes';
     font-size: 12px;
     font-weight: 400;
     color: #484848;
   }
   .seo-footer button {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
   }
   .expanded-description {
@@ -43,49 +40,69 @@
 
 <div class="seo-footer">
   <div class="minified-description">
-    <h2 class="minified-heading">
-      Buy the Best Biotin Hair Gummies
-    </h2>
+    <h1 class="minified-heading">
+      Biotin Hair Gummies
+    </h1>
     <p class="minified-para">
-      Nyumi Biotin Hair gummies are formulated using an enriching blend of Western and Indian ingredients to give you stronger, thicker, and shinier hair.
-One of the key ingredients in the hair gummy is biotin, a vitamin B known for its remarkable benefits for hair health. Biotin nourishes and strengthens your hair from within, promoting its growth and overall health.
-What sets Nyumi's Biotin Hair Gummies for women apart is our commitment to quality. We select premium clinically proven ingredients sourced from seven countries, to ensure that you get the best possible results. With natural flavors and colors, our <a href="https://www.nyumi.com\"> multivitamin gummies </a> are a delicious and convenient addition to your daily routine. Experience the transformative power of our Happy Hair Gummies enriched with biotin. Try Nyumi Hair Gummies and say goodbye to hair worries for good.
+      Nyumi Biotin Hair gummies are formulated using an enriching blend of 
+      Western and Indian ingredients to give you stronger, thicker, and shinier hair. 
+      One of the key ingredients in the hair gummy is biotin, a B vitamin known for 
+      its remarkable benefits for hair health. Biotin nourishes and strengthens your 
+      hair from within, promoting its growth and overall health. What sets Nyumi's 
+      Biotin Hair Gummies for women apart is our commitment to quality. We select 
+      premium clinically proven ingredients sourced from seven countries, to ensure 
+      that you get the best possible results. With natural flavors and colors, our 
+      multivitamin gummies are a delicious and convenient addition to your daily routine. 
+      Experience the transformative power of our Happy Hair Gummies enriched with biotin. 
+      Try Nyumi Hair Gummies and say goodbye to hair worries for good.
     </p>
     <button class="show-more-btn">SHOW MORE</button>  
   </div>
 
   <div class="expanded-description">
-    <h2>
-      Buy the Best Biotin Hair Gummies
-    </h2>
+    <h1>
+      Biotin Hair Gummies
+    </h1>
     <p>
-     Nyumi Biotin Hair gummies are formulated using an enriching blend of Western and Indian ingredients to give you stronger, thicker, and shinier hair.
-One of the key ingredients in the hair gummy is biotin, a vitamin B known for its remarkable benefits for hair health. Biotin nourishes and strengthens your hair from within, promoting its growth and overall health.
-What sets Nyumi's Biotin Hair Gummies for women apart is our commitment to quality. We select premium clinically proven ingredients sourced from seven countries, to ensure that you get the best possible results. With natural flavors and colors, our <a href="https://www.nyumi.com"> multivitamin gummies </a> are a delicious and convenient addition to your daily routine. Experience the transformative power of our Happy Hair Gummies enriched with biotin. Try Nyumi Hair Gummies and say goodbye to hair worries for good.
+      Nyumi Biotin Hair gummies are formulated using an enriching blend of 
+      Western and Indian ingredients to give you stronger, thicker, and shinier hair. 
+      One of the key ingredients in the hair gummy is biotin, a B vitamin known for 
+      its remarkable benefits for hair health. Biotin nourishes and strengthens your 
+      hair from within, promoting its growth and overall health. What sets Nyumi's 
+      Biotin Hair Gummies for women apart is our commitment to quality. We select 
+      premium clinically proven ingredients sourced from seven countries, to ensure 
+      that you get the best possible results. With natural flavors and colors, our 
+      multivitamin gummies are a delicious and convenient addition to your daily routine. 
+      Experience the transformative power of our Happy Hair Gummies enriched with biotin. 
+      Try Nyumi Hair Gummies and say goodbye to hair worries for good.
     </p>
     <h2>
       What is Biotin?
     </h2>
     <p>
-      A part of the Vitamin B family, biotin helps convert food into energy, which is key for nourishment. Biotin supports the metabolism of protein-building amino acids (keratin) essential for hair and nail health. Regular intake of biotin for hair growth can help improve hair fall, help improve the length and thickness of hair, and keep nails from becoming brittle, chipping, and cracking. Nyumi's Biotin Hair Gummies are  specially formulated dietary supplement designed to support the health and growth of your hair. We’ve used 100% RDA-approved levels of biotin, to ensure each dose is both effective and safe.
+      A part of the Vitamin B family, biotin helps convert food into energy, which is key 
+      for nourishment. Biotin supports the metabolism of protein-building amino acids (keratin) 
+      essential for hair and nail health. Regular intake of biotin can help improve hair fall, 
+      help improve the length and thickness of hair, and keep nails from becoming brittle, 
+      chipping, and cracking. Nyumi's Biotin Hair Gummy is a specially formulated dietary 
+      supplement designed to support the health and growth of your hair. We’ve used 100% 
+      RDA-approved levels of biotin, to ensure each dose is both effective and safe.
     </p>
     <h2>
-      Key Benefits of Buying Biotin Hair Gummies From Nyumi
+      Key Benefits of Buying Happy Hair Gummies From Nyumi
     </h2>
     <p>
-      We are built keeping women's specific nutrition needs in mind. Our gummies are formulated by German and Indian health experts with clinically researched Indian and Western ingredients. We are also vegan, gluten, and allergen-free.
-    </p>
-      <h2>
-     How Biotin Hair Gummies Nourish Your Hair
-    </h2>
-    <p>
-      Nyumi's Biotin Hair Gummies are infused with the power of biotin, a key nutrient for hair health. Biotin hair care gummies nourishe your hair follicles, promoting growth and strength. By incorporating these hair growth gummies into your routine, you provide your hair with the essential vitamins it needs to thrive, resulting in stronger, thicker, and shinier hair.
+      Nyumi's Biotin Hair Gummies are infused with the power of biotin, a key nutrient for 
+      hair health. Biotin nourishes your hair follicles, promoting growth and strength. By 
+      incorporating these hair growth gummies into your routine, you provide your hair with 
+      the essential vitamins it needs to thrive, resulting in stronger, thicker, and shinier hair.
     </p>
     <h2>
-      Directions for Use of Biotin Gummies for Women
+      Directions for Use of Hair Health Gummies for Women
     </h2>
     <p>
-      Take 2 hair health gummies daily preferably after a meal for better absorption. Take the gummies for three months to see the best results.
+      Take 2 gummies daily preferably after a meal for better absorption. Take the gummies for 
+      three months to see the best results.
     </p>
     <button class="show-less-btn">SHOW LESS</button>
 </div>
