--- a/snippets/seo-footer-skin.liquid
+++ b/snippets/seo-footer-skin.liquid
@@ -2,29 +2,26 @@
   .seo-footer {
     padding: 0 100px;
   }
-  .seo-footer a{
-    color:#551A8B;
-  }
   .seo-footer h1 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 14px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer h2 {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
     margin-bottom: 0.5rem;
     font-weight: 600;
   }
   .seo-footer p {
-    font-family: 'corbenr';
+    font-family: 'manropes';
     font-size: 12px;
     font-weight: 400;
     color: #484848;
   }
   .seo-footer button {
-    font-family: 'corbenr';
+    font-family: 'manropeb';
     font-size: 12px;
   }
   .expanded-description {
@@ -43,21 +40,21 @@
 
 <div class="seo-footer">
   <div class="minified-description">
-    <h2 class="minified-heading">
-      What are Radiant Skin Gummies?
-    </h2>
+    <h1 class="minified-heading">
+      Radiant Skin Gummies
+    </h1>
     <p class="minified-para">
-      Nyumi Radiant Skin Gummies are India’s first clinically proven skin health gummies. Our skin gummies are formulated using an enriching blend of 8 essential Indian herbs and Western ingredients including Vitamin C & E, Hyaluronic Acid, and Curcumin extract (Haldi). Our radiant skin gummies are ideal for people looking to achieve a youthful, radiant complexion as they help build collagen from within to tackle an age-related decline in collagen production by the body. Unlike any other collagen supplement, our skin gummies aid the body to keep creating the right amount of collagen to give supple & glowing skin. <a href=https://www.nyumi.com\> Multivitamin gummies </a> are a dietary supplement that provides a combination of essential vitamins and minerals in the form of chewable gummies. <a href ='https://nyumi.com/'>Multivitamin gummies </a> are intended to supplement a balanced diet and help fill nutritional gaps.
+      Nyumi Radiant Skin Gummies are India’s first clinically proven skin health gummies. Our skin gummies are formulated using an enriching blend of 8 essential Indian herbs and Western ingredients including Vitamin C & E, Hyaluronic Acid, and Curcumin extract (Haldi). Our radiant skin gummies are ideal for people looking to achieve a youthful, radiant complexion as they help build collagen from within to tackle an age-related decline in collagen production by the body. Unlike any other collagen supplement, our skin gummies aid the body to keep creating the right amount of collagen to give supple & glowing skin. <a href="https://www.nyumi.com\"> Multivitamin gummies </a> are a dietary supplement that provides a combination of essential vitamins and minerals in the form of chewable gummies. Multivitamin gummies are intended to supplement a balanced diet and help fill nutritional gaps.
     </p>
     <button class="show-more-btn">SHOW MORE</button>  
   </div>
 
   <div class="expanded-description">
-    <h2>
-      What are Radiant Skin Gummies?
-    </h2>
+    <h1>
+      Radiant Skin Gummies
+    </h1>
     <p>
-      Nyumi Radiant Skin Gummies are India’s first clinically proven skin health gummies. Our skin gummies are formulated using an enriching blend of 8 essential Indian herbs and Western ingredients including Vitamin C & E, Hyaluronic Acid, and Curcumin extract (Haldi). Our radiant skin gummies are ideal for people looking to achieve a youthful, radiant complexion as they help build collagen from within to tackle an age-related decline in collagen production by the body. Unlike any other collagen supplement, our skin gummies aid the body to keep creating the right amount of collagen to give supple & glowing skin. Multivitamin gummies are a dietary supplement that provides a combination of essential vitamins and minerals in the form of chewable gummies. <a href ='https://nyumi.com/'> Multivitamin gummies </a> are intended to supplement a balanced diet and help fill nutritional gaps.
+      Nyumi Radiant Skin Gummies are India’s first clinically proven skin health gummies. Our skin gummies are formulated using an enriching blend of 8 essential Indian herbs and Western ingredients including Vitamin C & E, Hyaluronic Acid, and Curcumin extract (Haldi). Our radiant skin gummies are ideal for people looking to achieve a youthful, radiant complexion as they help build collagen from within to tackle an age-related decline in collagen production by the body. Unlike any other collagen supplement, our skin gummies aid the body to keep creating the right amount of collagen to give supple & glowing skin. Multivitamin gummies are a dietary supplement that provides a combination of essential vitamins and minerals in the form of chewable gummies. Multivitamin gummies are intended to supplement a balanced diet and help fill nutritional gaps.
     </p>
     <h2>
       What is Collagen?
